deployment-for-v9.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuma-demo7
  namespace: kuma-demo7
  annotations:
    kuma.io/sidecar-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-deployment-new
  name: spring-deployment-new-service
  namespace: kuma-demo7
  annotations:
    80.service.kuma.io/protocol: "http"
    ingress.kubernetes.io/service-upstream: "true"
spec:
  ports:
    - port: 8085
      protocol: TCP
      targetPort: 8085
  selector:
    app: spring-deployment-new
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-deployment-new
  name: spring-deployment-new-deployment
  namespace: kuma-demo7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-deployment-new
      version: v0
  strategy: {}
  template:
    metadata:
      labels:
        app: spring-deployment-new
        version: v0
    spec:
      containers:
        - image: jaikratsingh/spring-boot-k8s:v10
          name: spring-boot-k8s
          resources: {}
