ingress-deployment-v2.yaml
# Annotations Reference:  https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/ingress/annotation/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-boot-service-ingress
  namespace: kuma-demo4
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  #ingressClassName: kong
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              serviceName: spring-deployment-new-service
              servicePort: 8085
